# bci-trans-EEG

./: .gitignore  AGENTS.md  DEVLOG.md  LICENSE  Makefile  PLANNING.md  README.md  prompt.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  research-task.md
.github/workflows/: ci.yml
Document/: ChatGPT-BCI与跨设备融合研究.md  deep_algorithm_research_diode.md  phase1_core_innovations_algorithm_derivation.md  phase1_github_code_development_plan.md  phase1_overall_implementation_plan.md  phase1_updated_journal_first_plan_v2.md
configs/: README.md
configs/datasets/: mi_benchmark_v1.yaml
configs/preprocessing/: mi_standard.yaml
configs/protocols/: few_shot_lodo.yaml  zero_shot_lodo.yaml
dataset-review/: Gemini-EEG 设备数据融合研究.md  deep-research-report (2).md  跨设备脑电数据融合开源数据集全面调研.md
notes/: repo_bootstrap.md  research_context.md  task_startup_checklist.md
paper_review/: ChatGPT-EEG设备融合研究.md  EEG设备数据融合研究.md  cross_device_eeg_report_cn.md
scripts/: README.md
src/bci_trans_eeg/: __init__.py  cli.py
src/bci_trans_eeg/core/: __init__.py
src/bci_trans_eeg/evaluation/: __init__.py
src/bci_trans_eeg/models/: __init__.py
src/bci_trans_eeg/preprocessing/: __init__.py  protocol.py
src/bci_trans_eeg/protocols/: __init__.py  definitions.py
src/bci_trans_eeg/utils/: __init__.py
survey/: main.tex  references.bib
tests/: test_imports.py
