[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-trans-eeg"
version = "0.1.0"
description = "Phase I benchmark-first codebase for cross-device EEG motor imagery research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "mrxachen74", email = "mrxachen74@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
bci-trans-eeg = "bci_trans_eeg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
